Fix more layout issues on Safari.

--- a/frontend/src/pages/Main/styles.scss
+++ b/frontend/src/pages/Main/styles.scss
@@ -3,6 +3,7 @@
 
 .main {
   width: 100%;
+  height: auto !important;
 
   display: flex;
   flex-direction: row;
